# py-fastapi-library-management-api

./: .env.sample  .flake8  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5c5b70a75f42_description.py  a3b980885df8_initial_migrations.py
src/: main.py
src/config/: settings.py
src/crud/: __init__.py  authors.py  books.py
src/database/: database.py  models.py
src/routes/: __init__.py  library.py
src/schemas/: schemas.py
