[project]
name = "py-fastapi-library-management-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
"alembic>=1.16.1",
"asyncpg>=0.30.0",
"fastapi>=0.115.12",
"fastapi-pagination>=0.13.1",
"psycopg2-binary>=2.9.10",
"pydantic>=2.11.5",
"pydantic-settings>=2.9.1",
"ruff>=0.11.11",
"sqlalchemy>=2.0.41",
"uvicorn>=0.34.2",
]

[tool.ruff]
exclude = ["tests", "migrations", ".venv"]
line-length = 88

[tool.ruff.lint]
preview = true
ignore = ["N999", "ANN002", "ANN003", "ANN201", "ARG002", "ANN001", "PLR6301", "ANN204", "ANN202", "ARG001"]
select = ["E", "F", "W", "N", "ANN", "UP", "I", "Q", "PL", "SIM", "ARG"]

[tool.ruff.format]
exclude = ["tests", "migrations", ".venv"]
quote-style = "double" # code qoute style (using double qoutes)